# libdivsufsort-rs

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: ci.yml
src/: divsufsort.rs  divsufsort64.rs  lib.rs
