[package]
name = "libdivsufsort-rs"
version = "0.1.5"
authors = ["baku <bahkhun@gmail.com>"]
edition = "2021"
rust-version = "1.57.0"
description = "A rust wrapper of libdivsufsort"
readme = "README.md"
repository = "https://github.com/baku4/libdivsufsort-rs/"
license = "MIT"
keywords = ["libdivsufsort", "sort", "bwt", "pattern_matching"]
categories = ["compression", "algorithms"]
build = "build.rs"

[build-dependencies]
cmake = "0.1.49"